--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,8 @@
     ],
     "require": {
         "php": ">=7.0",
-        "omnipay/paypal": "~3.0",
-        "omnipay/braintree": "~1.0",
-        "omnipay/stripe": "~2.0",
+        "omnipay/paypal": "^3.0",
+        "omnipay/stripe": "^3.0",
         "paypal/adaptivepayments-sdk-php":"3.*",
         "composer/installers": "~1.0"
     },
